DevTools: [Settings] Fix font size and alignment of the "Color format" setting label
This also fixes the "Indentation" setting label alignment

TBR=vsevik
NOTRY=true

Review URL: https://chromiumcodereview.appspot.com/18098008

git-svn-id: svn://svn.chromium.org/blink/trunk@154115 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/helpScreen.css
+++ b/front_end/helpScreen.css
@@ -414,6 +414,10 @@ body.platform-mac .help-content input[type=radio] {
     font-size: 13px;
 }
 
+.settings-tab .help-block fieldset.toplevel {
+    margin-left: 20px;
+}
+
 .settings-tab .help-block fieldset:disabled label:hover,
 .settings-tab .help-block fieldset.toplevel label:hover {
     color: inherit;
